# keyhunt-ocl-linux

./: CMakeLists.txt  README.md  build.sh  install_ocl.md  run.sh
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  keyhunt-ocl
keyhunt-ocl/: main.cpp  oclengine.cpp  utils.h  winglue.cpp  winglue.h
lib/openssl-1.0.2l/crypto/: buildinf.h
util/: b58.bat  rmd160.bat
